--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://node_3d2.tscn", "res://node_3dold.tscn", "res://art/player.glb"]
+open_scenes=["res://node_3d2.tscn", "res://node_3dold.tscn"]
 
 [ScriptEditor]
 
