--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     },
     "Profil 1": {
       "commandName": "Executable",
-      "executablePath": "C:\\prenos\\Godot_v4.0-stable_mono_win64\\Godot_v4.0-stable_mono_win64.exe",
+      "executablePath": "c:\\prenos\\Godot_v4.1.1-stable_mono_win64\\Godot_v4.1.1-stable_mono_win64.exe",
       "commandLineArgs": "--path,--verbose",
       "workingDirectory": ".",
       "nativeDebugging": true
