--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,17 +10,40 @@ dock_hsplit_1=0
 dock_hsplit_2=270
 dock_hsplit_3=-270
 dock_hsplit_4=0
+dock_1_selected_tab_idx=0
+dock_2_selected_tab_idx=0
+dock_3_selected_tab_idx=0
+dock_4_selected_tab_idx=0
+dock_5_selected_tab_idx=0
+dock_6_selected_tab_idx=0
+dock_7_selected_tab_idx=0
+dock_8_selected_tab_idx=0
+dock_floating={}
+dock_filesystem_selected_paths=PackedStringArray("res://node_3d2.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Properties/", "res://prenos/", "res://prenos/images2/", "res://art/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://node_3d2.tscn"]
+open_scenes=PackedStringArray("res://node_3d2.tscn")
+current_scene="res://node_3d2.tscn"
+center_split_offset=0
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://MeshInstance3D2.gd", "res://MeshInstance3D3.gd"]
+open_scripts=["res://prenos/images2/matice.txt", "res://MeshInstance3D2.gd", "res://MeshInstance3D3.gd"]
 open_help=[]
 script_split_offset=400
 list_split_offset=0
+selected_script="res://MeshInstance3D3.gd"
+
+[ShaderEditor]
+
+open_shaders=[]
+split_offset=0
+selected_shader=""
